# synther

./: .gitignore  README.md  pyproject.toml  setup.py  synther.py
src/synther/: __init__.py  __main__.py  envelopes.py  instruments.py  keyparser.py  note.py  oscilators.py  synther.py
synther/: __init__.py  __main__.py  notes.py  synther.py  synthesizer.py
